[package]
name = "bevy_jaipur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_interact_2d = { git = "https://github.com/Anshorei/bevy_rei", rev = "e326e32" }
bevy_prototype_lyon = { version = "0.6.0" }
bevy_tweening = "0.5.0"
enum-map = "2.4.1"
itertools = "0.10.3"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
